Correct nav display on mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,7 @@ header {
     width: 100%;
     margin-top: 1em;
     padding: 0.25em;
-    box-shadow: 0px 1px 4px;
+    box-shadow: 0px 4px 4px -5px;
 
     display: flex;
 }
@@ -48,6 +48,7 @@ header {
 
 #nav-container .nav > nav {
     margin-left: auto;
+    display: flex;
 }
 
 #article-container {
@@ -69,6 +70,8 @@ header {
     padding: 0.25em;
     margin-top: 1em;
     display: flex;
+
+    box-shadow: 0px -4px 4px -5px;
 }
 
 #footer-container footer {
